--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "long": "^5.3.2",
     "node-forge": "^1.3.3",
     "nuxt": "^3.17.5",
-    "protobufjs": "^8.0.0"
+    "protobufjs": "^8.0.0",
+    "vue-json-pretty": "^2.6.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.4.1",
